--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 
 	<body>
-		<h1>All The power with in you
-			youu creator of destiny
+		h1>All The power with in you
+         	youu creator of destiny
+		(bug here)
 		</h1>
 	</body>
 </html>
