--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 
 	<body>
-		h1>All The power with in you
+     <h1>All The power with in you
          	youu creator of destiny
-		(bug here)
+		(bug resolved)
 		</h1>
 	</body>
 </html>
