--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<body>
 		h1>All The power with in you
          	youu creator of destiny
-		(bug here)
+		 here changes[dev2]bug here)
 		</h1>
 	</body>
 </html>
