--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
          	youu creator of destiny
 
 		</h1>
-		<h3>Faith in self Faith in God</h3>
+		<h3>Faith in self Faith in God
+		That is secreate of Greatness
+		
+		</h3>
 	</body>
 </html>
