--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
          	youu creator of destiny
 
 		</h1>
-		<h3>Faith in self Faith in God</h3>
+		<h3>Faith in self Faith in God 
+    It is a greatness</h3>
 	</body>
 </html>
