--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 	<body>
      <h1>All The power with in you
-         	youu creator of destiny
+      youu 
+      			
 
 		</h1>
 		<h3>Faith in self Faith in God 
