changes done bla bla

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
-
 	<body>
      <h1>All The power with in you 
                    <h1>Faith in self Faith in God 
-			   
+		again changes making reandom bla bla bal	   
 	<h3>It is a greatness</h3>
 	</body>
 </html>
